--- a/Resources/Stylesheet.xaml
+++ b/Resources/Stylesheet.xaml
@@ -14,6 +14,18 @@
         <Setter Property="HorizontalAlignment" Value="Center" />
     </Style>
 
+    <Style x:Key="lstSearchB" TargetType="ListBox">
+        <Setter Property="MaxHeight" Value="300"/>
+        <Setter Property="Background" Value="WhiteSmoke"/>
+    </Style>
+
+    <Style x:Key="txtSearchB" TargetType="TextBox">
+        <Setter Property="Height" Value="30"/>
+        <Setter Property="Width" Value="500"/>
+        <Setter Property="Background" Value="WhiteSmoke"/>
+        <Setter Property="VerticalContentAlignment" Value="Center"/>
+        <Setter Property="FontSize" Value="15"/>
+    </Style>
     <!--#endregion-->
     <!--#region LederView-->
     <Style x:Key="btnShow" TargetType="Button">
