--- a/Views/LederView.xaml
+++ b/Views/LederView.xaml
@@ -80,7 +80,7 @@
                 <DataGridTextColumn Header="UddannelsesLængdeIUger" Binding="{Binding uddannelsesLængdeIUger}" />
             </DataGrid.Columns>
         </DataGrid>
-        <Grid x:Name="overlayLoading" Grid.Column="0" Grid.ColumnSpan="4" Grid.Row="0" Grid.RowSpan="2" Visibility="Visible">
+        <Grid x:Name="overlayLoading" Grid.Column="0" Grid.ColumnSpan="4" Grid.Row="0" Grid.RowSpan="2" Visibility="Collapsed">
             <Border Background="Black" Opacity="0.35"/>
             <StackPanel VerticalAlignment="Center">
                 <TextBlock Width="200" Height="20" Text="Kodeord" FontSize="16" TextAlignment="Justify"/>
@@ -90,9 +90,9 @@
                 <TextBox Width="200" Height="20" x:Name="txtValiderKodeord"/>
                 <Separator Height="12" Background="Transparent"/>
                 <DockPanel HorizontalAlignment="Center">
-                    <Button Width="95" Height="30" FontSize="15" Content="Tilbage" VerticalAlignment="Center" HorizontalAlignment="Left" Background="LightCyan" Click="Button_Click"/>
+                    <Button Width="95" Height="30" FontSize="15" Content="Tilbage" VerticalAlignment="Center" HorizontalAlignment="Left" Background="LightBlue" Click="Button_Click"/>
                     <Separator Width="10"/>
-                    <Button Width="95" Height="30" FontSize="15" Content="Skift Kodeord" x:Name="btnValiderKodeord" Background="LightCyan" Click="ValiderOpdaterPassword_btnClick"/>
+                    <Button Width="95" Height="30" FontSize="15" Content="Skift Kodeord" x:Name="btnValiderKodeord" Background="LightBlue" Click="ValiderOpdaterPassword_btnClick"/>
                 </DockPanel>
             </StackPanel>
         </Grid>
