--- a/Views/LederView.xaml
+++ b/Views/LederView.xaml
@@ -17,25 +17,35 @@
             <RowDefinition Height="70" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <Grid Width="450" HorizontalAlignment="Right" Grid.Column="1">
+        <Grid HorizontalAlignment="Right" Grid.Column="1" Grid.Row="0">
             <DockPanel Height="30" VerticalAlignment="Top">
-                <Button x:Name="btnRKV" Content="RKV" Click="RKV_Click" HorizontalAlignment="Left" VerticalAlignment="Center" Style="{StaticResource btnShow}" />
+                <Button x:Name="btnRKV" Content="RKV" Click="RKV_Click" HorizontalAlignment="Left" VerticalAlignment="Bottom" Style="{StaticResource btnShow}" />
                 <Separator Style="{StaticResource SepSpaceW}" />
-                <Button x:Name="btnMerit" Content="Merit" Click="Merit_Click" HorizontalAlignment="Left" VerticalAlignment="Center" Style="{StaticResource btnShow}" />
+                <Button x:Name="btnMerit" Content="Merit" Click="Merit_Click" HorizontalAlignment="Left" VerticalAlignment="Bottom" Style="{StaticResource btnShow}" />
                 <Separator Style="{StaticResource SepSpaceW}" />
-                <Button x:Name="btnVisAlle" Content="Vis Alle" Click="visAlle_Click" HorizontalAlignment="Left" VerticalAlignment="Center" Style="{StaticResource btnShow}" />
+                <Button x:Name="btnVisAlle" Content="Vis Alle" Click="visAlle_Click" HorizontalAlignment="Left" VerticalAlignment="Bottom" Style="{StaticResource btnShow}" />
             </DockPanel>
+            <Separator Background="Transparent"/>
             <DockPanel Height="30" VerticalAlignment="Bottom">
-                <Button x:Name="btnSPS" Content="SPS" Click="SPS_Click" HorizontalAlignment="Left" VerticalAlignment="Center" Style="{StaticResource btnShow}" />
+                <Button x:Name="btnSPS" Content="SPS" Click="SPS_Click" HorizontalAlignment="Left" VerticalAlignment="Top" Style="{StaticResource btnShow}" />
                 <Separator Style="{StaticResource SepSpaceW}" />
-                <Button x:Name="btnEUD" Content="EUD" Click="EUD_Click"  HorizontalAlignment="Left" VerticalAlignment="Center" Style="{StaticResource btnShow}" />
+                <Button x:Name="btnEUD" Content="EUD" Click="EUD_Click"  HorizontalAlignment="Left" VerticalAlignment="Top" Style="{StaticResource btnShow}" />
                 <Separator Style="{StaticResource SepSpaceW}" />
-                <TextBox Width="160" Height="20" x:Name="Sogefelt" Grid.Column="0" Grid.Row="0" HorizontalAlignment="Left" />
+                <TextBox Width="160" Height="20" x:Name="Sogefelt" Grid.Column="0" Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Top"/>
             </DockPanel>
         </Grid>
-        <ComboBox Width="200" Height="25" x:Name="cmbUddanelse" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="1" Grid.Row="0" SelectionChanged="cmbUddanelse_SelectionChanged" />
-        <ComboBox Width="200" Height="25" x:Name="cmbSchool" HorizontalAlignment="Left" VerticalAlignment="Bottom" Grid.Column="1" Grid.Row="0" SelectionChanged="SkoleDropDown_SelectionChanged" />
-
+        <DockPanel Grid.Column="1" Grid.Row="0" HorizontalAlignment="Left">
+        <StackPanel VerticalAlignment="Center">
+            <ComboBox Width="200" Height="25" x:Name="cmbUddanelse" HorizontalAlignment="Left" VerticalAlignment="Bottom" SelectionChanged="cmbUddanelse_SelectionChanged" />
+            <Separator Background="Transparent" Height="5"/>
+            <ComboBox Width="200" Height="25" x:Name="cmbSchool" HorizontalAlignment="Left" VerticalAlignment="Top" SelectionChanged="SkoleDropDown_SelectionChanged" />
+        </StackPanel>
+            <StackPanel VerticalAlignment="Center">
+                <Label Content="Udd. Linje"/>
+                <Separator Background="Transparent" Height="5"/>
+                <Label Content="Add. Linje"/>
+            </StackPanel>
+        </DockPanel>
         <Border Grid.Column="3" Grid.Row="0" Background="#495057" BorderThickness="5" BorderBrush="Gray">
             <TextBlock  Text="Admin" FontSize="28" HorizontalAlignment="Center" VerticalAlignment="Center" />
         </Border>
