--- a/Views/EUVView.xaml
+++ b/Views/EUVView.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:GFElevInterview.Views"
              mc:Ignorable="d"
-             d:DesignHeight="1450" d:DesignWidth="800" Background="White">
+             d:DesignHeight="450" d:DesignWidth="800" Background="White">
     <!--Default Height "450" Width "800"-->
     <Grid>
         <Grid.ColumnDefinitions>
@@ -136,7 +136,11 @@
                             </StackPanel>
                         </Border>
                     </Expander>
-
+                </StackPanel>
+            </Border>
+            <Separator Height="4" Background="Transparent"/>
+            <Border BorderBrush="Gray" BorderThickness="1">
+                <StackPanel>
                     <Expander x:Name="expEuv2">
                         <Border  x:Name="bdrEuv2">
                             <DockPanel>
@@ -162,7 +166,7 @@
                     </Expander>
                 </StackPanel>
             </Border>
-            <Separator Style="{StaticResource SepSpaceH}" />
+            <Separator Height="4" Background="Transparent"/>
             <Border Style="{StaticResource bdrEUV2}" x:Name="bdrSps" Height="70">
                 <DockPanel x:Name="stackSps">
                     <Label Content="SPS:" FontSize="15" VerticalContentAlignment="Center" FontWeight="Black"/>
