--- a/Views/EUVView.xaml
+++ b/Views/EUVView.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:GFElevInterview.Views"
              mc:Ignorable="d"
-             d:DesignHeight="1450" d:DesignWidth="800" Background="White">
+             d:DesignHeight="450" d:DesignWidth="800" Background="White">
     <!--Default Height "450" Width "800"-->
     <Grid>
         <Grid.ColumnDefinitions>
@@ -44,7 +44,7 @@
                     <DockPanel>
                         <Label Content="EUV1:" FontSize="15" VerticalContentAlignment="Center" FontWeight="Black"/>
                         <StackPanel HorizontalAlignment="Stretch">
-                            <Label  Content="Har du 2 års relevant erhvervserfaring, inde for de sidste 5 år?" FontSize="13" HorizontalAlignment="Center" />
+                            <Label  Content="Har du 2 års relevant erhvervserfaring, inde for de sidste 5 år?" FontSize="13" HorizontalAlignment="Center"/>
                             <DockPanel Style="{StaticResource docKnapH}">
                                 <RadioButton x:Name="rbEuv1Ja" GroupName="grpeuv1" HorizontalAlignment="Center" VerticalAlignment="Center" Content="Ja">
                                     <RadioButton.RenderTransform>
@@ -136,21 +136,20 @@
                             </StackPanel>
                         </Border>
                     </Expander>
-
                     <Expander x:Name="expEuv2">
                         <Border  x:Name="bdrEuv2">
                             <DockPanel>
                                 <Label Content="EUV2:" FontSize="15" VerticalContentAlignment="Center" FontWeight="Black"/>
                                 <StackPanel>
 
-                                    <TextBlock TextWrapping="WrapWithOverflow" Text="Har du en dokumenteret afsluttet uddannelse og/eller har du mindre end 2 års relevant dokumenteret erhvervserfaring." FontSize="16"  HorizontalAlignment="Center" />
-                                    <DockPanel Style="{StaticResource docKnapH}">
+                                    <TextBlock TextWrapping="WrapWithOverflow" Text="Har du en dokumenteret afsluttet uddannelse og/eller har du mindre end 2 års relevant dokumenteret erhvervserfaring." FontSize="14"  HorizontalAlignment="Stretch" />
+                                    <DockPanel Style="{StaticResource docKnapH}" Height="30">
                                         <RadioButton x:Name="rbEuv2Ja" Content="Ja" HorizontalAlignment="Right" VerticalAlignment="Center">
                                             <RadioButton.RenderTransform>
                                                 <ScaleTransform ScaleX="1.6" ScaleY="1.6" />
                                             </RadioButton.RenderTransform>
                                         </RadioButton>
-                                        <RadioButton x:Name="rbEuv2Nej" Content="Nej" Style="{StaticResource rbnNej}">
+                                        <RadioButton x:Name="rbEuv2Nej" Content="Nej" Style="{StaticResource rbnNej}" VerticalContentAlignment="Center">
                                             <RadioButton.RenderTransform>
                                                 <ScaleTransform ScaleX="1.6" ScaleY="1.6" />
                                             </RadioButton.RenderTransform>
